# embedded-readline

./: Cargo.toml  README.md
src/: buffers.rs  lib.rs  line.rs  line_cursor.rs  line_diff.rs  readline.rs  readline_error.rs  readline_tests.rs  test_reader_writer.rs  util.rs
